--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akash Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half">
+            <h1>WELCOME TO</h1>
+            <h1>The life of an<span class="orange"><br> Web Apperentice!</span></h1>
+            <h2 id="nelson">The greatest glory in living lies not in never falling,<br> but in rising every time we
+                fall.
+            </h2>
+            <h4 id="name"><small> -NELSON MANDELA</small></h4>
+            <h2>The Goal Ahead</h2>
+            <p>Seeking for a challenging role in an illustrious organization to utilize my technical, coding, designing,
+                software development skills for the growth of the organization as well as to prolong my knowledge
+                regarding
+                fresh and emerging trends in the IT sector by hard work and loyalty towards my organization practicing
+                veritable skills.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/nasin-ayenul-akash-1b01401a4/">HIRE
+                ME</a>
+        </div>
+        <div class="half">
+            <img src="images/me2.jpg" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
