--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half">
             <h1>WELCOME TO</h1>
             <h1>The life of an<span class="orange"><br> Web Apperentice!</span></h1>
@@ -36,6 +36,35 @@
         </div>
     </section>
 
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange">2021-Present | Pro Level Developer</h3>
+                <p>From 2018 I started persued web development through my varsity curriculam. Then for the final project
+                    I
+                    had to go through HTML, CSS, PHP, JavaScript. I learnt the workings of Ajax, Json adding many
+                    libraries
+                    in the process and developped an web application regarding Bank Managemnet System.</p>
+            </div>
+            <div id="baby-developer" class="experience-item">
+                <h2>Baby web Developer</h2>
+                <h3 class="orange">2018-2020 | Primary Level Learner</h3>
+                <p>From 2018 I started persued web development through my varsity curriculam. Then for the final project
+                    I
+                    had to go through HTML, CSS, PHP, JavaScript. I learnt the workings of Ajax, Json adding many
+                    libraries
+                    in the process and developped an web application regarding Bank Managemnet System.</p>
+            </div>
+        </div>
+
+    </section>
+
 </body>
+
+<footer>
+    <p>©N A Akash, Full Stack Developper2022.</p>
+</footer>
 
 </html>
