--- a/index.html
+++ b/index.html
@@ -8,45 +8,85 @@
     <title>Akash Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins:wght@400;500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="top-banner flexible-container">
         <div class="half">
-            <h1>WELCOME TO</h1>
-            <h1>The life of an<span class="orange"><br> Web Apperentice!</span></h1>
-            <h2 id="nelson">The greatest glory in living lies not in never falling,<br> but in rising every time we
-                fall.
-            </h2>
-            <h4 id="name"><small> -NELSON MANDELA</small></h4>
-            <h2>The Goal Ahead</h2>
-            <p>Seeking for a challenging role in an illustrious organization to utilize my technical, coding, designing,
+            <h1>Welcome To<br><span class="orange"><br>N A Akash's </span>World</h1>
+
+            <h2>The Vision of an Apperentice</h2>
+            <p id="paragraph1">Hey there! My Name is Nasin Ayenul Akash. A dream charisher from the proud city Jashore,
+                Bangladesh.
+                I have completed my Bachelor’s degree from American International University, Bangladesh (AIUB) in
+                Computer Science and Engineering (CSE) with an academic CGPA of 3.80 out of 4.00. I've a firm knowledge
+                in C, C++, Java, C#, Python, OpenGL etc.I've completed my thesis on Convolutional Neural Networks
+                focusing on
+                Image Processing, Deep learning using python.
+                Seeking for a challenging role in an illustrious organization to utilize my technical,
+                coding, designing,
                 software development skills for the growth of the organization as well as to prolong my knowledge
                 regarding
                 fresh and emerging trends in the IT sector by hard work and loyalty towards my organization practicing
                 veritable skills.
+                <br><br>
             </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/nasin-ayenul-akash-1b01401a4/">HIRE
                 ME</a>
         </div>
         <div class="half">
-            <img src="images/me2.jpg" alt="">
+            <img src="images/me2.jpg" alt=""><br><br>
+            <h3 id="nelson">"The greatest glory in living lies not in never falling,<br> but in rising every time we
+                fall."
+            </h3>
+            <h3 id="name"><small> -NELSON MANDELA</small></h3>
+        </div>
+    </section>
+    <!--
+        --------------------------------------------------
+    -->
+
+    <section class="dream-big-container">
+        <div class="half">
+            <img src="images/me3.jpg" alt="">
+        </div>
+        <div class="half">
+            <h1 id="dream-big">Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>Got on the bus on 2018 when I gained interest in the web technologies. With the varity of
+                skills in HTML, CSS, PHP, JavaScript I can render my designated
+                organization
+                a good quality service with a creative mind which can perhaps work for the welfare
+                of people. Still
+                Learning
+                various aspects and fields of web technologies for a better understanding and polishing ownself to be a
+                <strong class="red-tomato">FULL STACK DEVELOPER</strong>.<br><br><br>
+                <a class="download-resume" target="_blank"
+                    href="https://drive.google.com/file/d/1jG_J6X3HAXkh-kYceilxDxB1dCmumMgY/view">Download
+                    My Resume</a>
+            </p>
+
+
         </div>
     </section>
 
+    <!--
+        --------------------------------------------------
+    -->
+
     <section class="experience-area">
-        <h1>Experiences</h1>
+        <h1 id="exp" class="skyblue">Experiences</h1>
         <div class="flexible-container">
             <div id="full-stack-developer" class="experience-item">
                 <h2>Full Stack Developer</h2>
-                <h3 class="orange">2021-Present | Pro Level Developer</h3>
-                <p>From 2018 I started persued web development through my varsity curriculam. Then for the final project
-                    I
-                    had to go through HTML, CSS, PHP, JavaScript. I learnt the workings of Ajax, Json adding many
-                    libraries
-                    in the process and developped an web application regarding Bank Managemnet System.</p>
+                <h3 class="orange">2021-Present | Mid-Level Developer</h3>
+                <p>In the year 2021, I was clear about my goal and polishing my ownself since then.
+                    I concentrated on designing and backend logics on which an web application stands on.
+                    Now I'am on a camp trip with Programming Hero. On which I can set myself as a Full stack developer.
+                </p>
             </div>
             <div id="baby-developer" class="experience-item">
                 <h2>Baby web Developer</h2>
@@ -55,7 +95,10 @@
                     I
                     had to go through HTML, CSS, PHP, JavaScript. I learnt the workings of Ajax, Json adding many
                     libraries
-                    in the process and developped an web application regarding Bank Managemnet System.</p>
+                    in the process and  Developed a fully functional Bank Management Web Application. During this
+                    process I came to know,
+                    I wanted to be a developer and working with these since then.</p><br><br>
+
             </div>
         </div>
 
